src/test/deca/context/invalid/instanceof-selection.context
instanceof-selection.deca:3: